--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
  <div class="todo-item">
   <p class="item-text">Make ToDo</p>
   <ul class="item-btn"><li><i class="fa-solid fa-plus add"  data-btn="make"></i></li>
-    <li><i class="fa-solid fa-trash trash"></i></li></ul> 
+    <li><i class="fa-solid fa-trash trash first-trash"></i></li></ul> 
    </div>
    <div class="total"><span class="accum">Total 0</span> 
 </div>
@@ -50,7 +50,7 @@
   <div class="todo-item">
    <p class="item-text">In progress</p>
    <ul class="item-btn"><li><i class="fa-solid fa-plus addnew"  data-btn="progress"></i></li>
-     <li><i class="fa-solid fa-trash trash"></i></li></ul> 
+     <li><i class="fa-solid fa-trash trash second-trash"></i></li></ul> 
     </div>
 <div class="total">
   <span class="accum2">Total 0</span>
@@ -75,7 +75,7 @@
   <div class="todo-item">
    <p class="item-text">Done</p>
    <ul class="item-btn"><li><i class="fa-solid fa-plus adddone"  data-btn="done"></i></li>
-     <li><i class="fa-solid fa-trash trash"></i></li></ul> 
+     <li><i class="fa-solid fa-trash trash done-trash"></i></li></ul> 
     </div>
     <div class="total"><span class="accum3">Total 0</span></div>
     <div class="task-done" data-btn="done">
