--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
   <h3 class="card-title"></h3>
   <div class="card-content"></div>
   <div class="card-footer">
-    <span class="name"></span>
+    <span class="name">Total 0</span>
     <button class="remove-done"></button>
     <button class="send-back-inprogress"></button>
      </div>
