--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,11 @@
 <div class="header-wrap">
   <div class="logo">ToDo</div>
   <div class="logo-title">What should I do today?</div>
-  <div class="current-day">12.12.2022</div>
+  <div class="current-day">
+<span class="currentdate"></span>
+<span class="currentmonth"></span>
+<span class="currentyear"></span>
+  </div>
 </div></div>
 </header>
 
@@ -74,8 +78,7 @@
  <div class="card">
   <div class="todo-item">
    <p class="item-text">Done</p>
-   <ul class="item-btn"><li><i class="fa-solid fa-plus adddone"  data-btn="done"></i></li>
-     <li><i class="fa-solid fa-trash trash done-trash"></i></li></ul> 
+   <ul class="item-btn"><li><i class="fa-solid fa-trash trash done-trash"></i></li></ul> 
     </div>
     <div class="total"><span class="accum3">Total 0</span></div>
     <div class="task-done" data-btn="done">
