--- a/src/index.html
+++ b/src/index.html
@@ -102,9 +102,9 @@
      <form action="" class="task-form">
       <i class="fa-solid fa-xmark close-btn"></i>
     <h3 class="title-task">Fill in the required fields</h3>    
-    <input id="title" type="text" placeholder="title">
-    <input id="author" type="text" placeholder="author">
-    <textarea id="message" type="text" placeholder="task"></textarea> 
+    <input id="title" type="text" class="input-task" placeholder="title">
+    <input id="author" type="text" class="input-task" placeholder="author">
+    <textarea id="message" type="text" class="input-task" placeholder="task"></textarea> 
     <input id="btn-create" type="submit" value="Make ToDo">
     <input id="btn-inprogress" type="submit" value="Inprogress">
   </form>
